se cambia el titulo del index

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Practica de clase 6</title>
+        <title>asdasdasdasd</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
@@ -17,6 +17,7 @@
         <br>
         <label for="">Pasword</label>
         <input type="password" name="" id="">
+
         </form>
 
         <script src="" async defer></script>
